Fix duplicated code after merge

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h2>Enter 4-Digit Code</h2>
   <input type="password" id="codeInput" maxlength="4" placeholder="****">
-  <button onclick="checkCode()">Unlock</button>
+  <button onclick="checkCode()">unlock</button>
   <div id="message"></div>
   <a id="secretLink" href="hidden.html">Try another way...</a>
 
@@ -16,3 +16,4 @@
   
 </body>
 </html>
+  
