--- a/index.html
+++ b/index.html
@@ -7,18 +7,17 @@
 </head>
 
 <body>
-<div id="terminal"></div><span class="cursor"></span>
+<div id="terminal"></div>
+<span class="cursor"></span>
 <div class="scanline"></div>
-
 <div id="codeSection">
   <p>ENTER SECURITY CODE:</p>
   <input type="password" id="codeInput" maxlength="4" placeholder="****">
   <button onclick="checkCode()">ENTER</button>
   <div id="message"></div>
-  <a id="secretLink" href="hidden.html">Try another way...</a>
+  <a id="secretLink" href="little game/game.html">Try another way...</a>
 </div>
 <script src="script.js"></script>
-
 
 </body>
 </html>
