--- a/little game/game.html
+++ b/little game/game.html
@@ -1,1 +1,9 @@
-
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Little Game</title>
+</head>
+<body>
+    <h1>Welcome to the Little Game!</h1>
+</body>
+</html>
